# fastbin

./: .editorconfig  .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE.md  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: build.yml  pull_request.yml  release.yml  superlinter.yml  tests.yml
src/fastbin/: enforcer.py  policy.py
tests/: test_dummy.py  test_enforcer.py  test_policy.py
